--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             <strong>Address</strong>
                         </h6>
                         <p class="mbr-text mbr-fonts-style display-7">Stack team, DAPI<br>IMT Atlantique, campus Nantes <br>4 rue Alfred Kastler, BP 20722
-<br>44307 Nantes Cedex 3 - FRANCE<br>
+<br>44307 Nantes cedex 3 - FRANCE<br>
                         </p>
                     </div>
                 </div>
