--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="card-box align-left">
                         <h4 class="card-title mbr-fonts-style mb-4 display-5"><strong>Research</strong></h4>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7">I have been working in the field of software architectures for distributed systems since my PhD thesis. For 10-15 years now, I have been particularly interested in Sustainable Computing.<br>I am currently investigating self-adaptive component-based applications for large-scale distributed systems powered by renewable resources.</p>
-                        <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://haltools.inria.fr/Public/afficheRequetePubli.php?auteur_exp=Thomas+Ledoux&idHal=thomas-ledoux&annee_publideb=1994&annee_publifin=2024&CB_auteur=oui&CB_titre=oui&CB_article=oui&CB_pubmedId=oui&CB_typdoc=oui&langue=Anglais&tri_exp=annee_publi&tri_exp2=typdoc&tri_exp3=date_publi&ordre_aff=TA&Fen=Aff&css=../css/VisuRubriqueEncadre.css" target="_blank">See my Publications</a></div>
+                        <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://haltools.inria.fr/Public/afficheRequetePubli.php?auteur_exp=Thomas+Ledoux&idHal=thomas-ledoux&annee_publideb=1994&annee_publifin=2025&CB_auteur=oui&CB_titre=oui&CB_article=oui&CB_pubmedId=oui&CB_typdoc=oui&langue=Anglais&tri_exp=annee_publi&tri_exp2=typdoc&tri_exp3=date_publi&ordre_aff=TA&Fen=Aff&css=../css/VisuRubriqueEncadre.css" target="_blank">See my Publications</a></div>
                     </div>
                 </div>
             </div>
@@ -290,7 +290,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3036912" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Free AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3036912" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">AI Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
